Mise à jour du site conformément au cahier des charges

--- a/videos.html
+++ b/videos.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Back in Scott - Contact</title>
+    <title>Back in Scott - Vidéos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,22 +21,11 @@
 
     <main>
         <section>
-            <h2>Contactez-nous</h2>
-            <p>
-                Vous souhaitez nous programmer ou bien vous souhaitez simplement nous laisser un message ? Utilisez le formulaire suivant.
-            </p>
-            <form action="mailto:backinscott@gmail.com" method="post" enctype="text/plain">
-                <label for="name">Nom :</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email :</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message :</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-
-                <button type="submit">Envoyer</button>
-            </form>
+            <h2>Nos Vidéos</h2>
+            <div class="videos">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+                <!-- Ajoutez plus de vidéos ici -->
+            </div>
         </section>
     </main>
 
