--- a/index.html
+++ b/index.html
@@ -2,31 +2,43 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Nom du Groupe - Groupe de reprises d'AC/DC</title>
+    <title>Back in Scott - Groupe Tribute AC/DC</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Nom du Groupe</h1>
+        <h1>Back in Scott</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="events.html">Concerts</a></li>
-                <li><a href="gallery.html">Galerie</a></li>
+                <li><a href="dates.html">Dates</a></li>
+                <li><a href="videos.html">Vidéos</a></li>
+                <li><a href="photos.html">Photos</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <section class="hero">
-            <h2>Revivez l'énergie d'AC/DC en live!</h2>
-            <p>Nous sommes le meilleur groupe de reprises d'AC/DC de la région.</p>
-            <a href="events.html" class="btn">Voir les prochains concerts</a>
+            <h2>Bienvenue !</h2>
+            <p>
+                Back in Scott est un groupe tribute AC/DC composé de 5 musiciens d’Ille et Vilaine et des Côtes d’Armor ce qui en fait un groupe Tribute AC/DC certifié 100% Pur Beurre salé ! 
+                Le répertoire de Back in Scott s’articule essentiellement autour de la période Bon Scott d’AC/DC (1974-1980) sans oublier l’incontournable album <em>Back in Black</em>. Back in Scott est un tribute qui ne cherche pas à imiter ou singer mais à restituer l’énergie et le son brut originel d’AC/DC : Une rythmique implacable, des solos guitare tranchants et Rock and Roll, une performance vocale fidèle : <strong>Let there be Rock</strong> !
+            </p>
+            <img src="images/back-in-scott-photo.jpg" alt="Back in Scott en concert">
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2023 Nom du Groupe. Tous droits réservés.</p>
+        <a href="https://www.facebook.com/backinscott?locale=fr_FR" target="_blank">Facebook</a> |
+        <a href="https://www.instagram.com/backinscott/" target="_blank">Instagram</a>
+        <p>Contact Fred : 06 48 37 32 27</p>
     </footer>
+
+    <!--Badge Linkaband généré le 24-09-2024-->
+    <a href='https://linkaband.com/back-in-scott?utm_source=badge&utm_campaign=122440' target='_blank'>
+        <img src='https://linkaband.com/assets/images/validation/reservation-noir.png' alt='Back-in-scott' style='width: 130px; height: 130px;'/>
+    </a>
 </body>
 </html>
