--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Back in Scott - Contact</title>
+    <title>Back in Scott - Photos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,22 +21,13 @@
 
     <main>
         <section>
-            <h2>Contactez-nous</h2>
-            <p>
-                Vous souhaitez nous programmer ou bien vous souhaitez simplement nous laisser un message ? Utilisez le formulaire suivant.
-            </p>
-            <form action="mailto:backinscott@gmail.com" method="post" enctype="text/plain">
-                <label for="name">Nom :</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email :</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message :</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-
-                <button type="submit">Envoyer</button>
-            </form>
+            <h2>Galerie Photos</h2>
+            <div class="gallery">
+                <img src="Photos/photo1.jpg" alt="Concert 1">
+                <img src="Photos/photo2.jpg" alt="Concert 2">
+                <img src="Photos/photo3.jpg" alt="Concert 3">
+                <!-- Ajoutez plus d'images ici -->
+            </div>
         </section>
     </main>
 
@@ -49,6 +40,6 @@
     <!--Badge Linkaband généré le 24-09-2024-->
     <a href='https://linkaband.com/back-in-scott?utm_source=badge&utm_campaign=122440' target='_blank'>
         <img src='https://linkaband.com/assets/images/validation/reservation-noir.png' alt='Back-in-scott' style='width: 130px; height: 130px;'/>
-    </a>
-</body>
-</html>
+    </a> 
+</body> 
+</html> 
