Ajout des dossier 2

--- a/photos.html
+++ b/photos.html
@@ -23,9 +23,9 @@
         <section>
             <h2>Galerie Photos</h2>
             <div class="gallery">
-                <img src="Photos/photo1.jpg" alt="Concert 1">
-                <img src="Photos/photo2.jpg" alt="Concert 2">
-                <img src="Photos/photo3.jpg" alt="Concert 3">
+                <img src="Photos/concert.jpg" alt="Concert 1">
+                <img src="Photos/concert.jpg" alt="Concert 2">
+                <img src="Photos/concert.jpg" alt="Concert 3">
                 <!-- Ajoutez plus d'images ici -->
             </div>
         </section>
