--- a/dates.html
+++ b/dates.html
@@ -2,22 +2,23 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Nom du Groupe - Concerts</title>
+    <title>Back in Scott - Dates de Concerts</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Nom du Groupe</h1>
+        <h1>Back in Scott</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="events.html">Concerts</a></li>
-                <li><a href="gallery.html">Galerie</a></li>
+                <li><a href="dates.html">Dates</a></li>
+                <li><a href="videos.html">Vidéos</a></li>
+                <li><a href="photos.html">Photos</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <section>
             <h2>Prochains Concerts</h2>
@@ -26,26 +27,31 @@
                     <th>Date</th>
                     <th>Lieu</th>
                     <th>Ville</th>
-                    <th>Billets</th>
                 </tr>
                 <tr>
-                    <td>15 Octobre 2023</td>
+                    <td>15 Octobre 2024</td>
                     <td>Le Zénith</td>
                     <td>Paris</td>
-                    <td><a href="#">Acheter</a></td>
                 </tr>
                 <tr>
-                    <td>22 Octobre 2023</td>
+                    <td>22 Octobre 2024</td>
                     <td>L'Olympia</td>
                     <td>Lyon</td>
-                    <td><a href="#">Acheter</a></td>
                 </tr>
-                <!-- Ajoutez plus de lignes selon vos besoins -->
+                <!-- Ajoutez plus de dates ici -->
             </table>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2023 Nom du Groupe. Tous droits réservés.</p>
+        <a href="https://www.facebook.com/backinscott?locale=fr_FR" target="_blank">Facebook</a> |
+        <a href="https://www.instagram.com/backinscott/" target="_blank">Instagram</a>
+        <p>Contact Fred : 06 48 37 32 27</p>
     </footer>
+
+    <!--Badge Linkaband généré le 24-09-2024-->
+    <a href='https://linkaband.com/back-in-scott?utm_source=badge&utm_campaign=122440' target='_blank'>
+        <img src='https://linkaband.com/assets/images/validation/reservation-noir.png' alt='Back-in-scott' style='width: 130px; height: 130px;'/>
+    </a>
 </body>
 </html>
