--- a/videos.html
+++ b/videos.html
@@ -37,7 +37,7 @@
 
     <!--Badge Linkaband généré le 24-09-2024-->
     <a href='https://linkaband.com/back-in-scott?utm_source=badge&utm_campaign=122440' target='_blank'>
-        <img src='https://linkaband.com/assets/images/validation/reservation-noir.png' alt='Back-in-scott' style='width: 130px; height: 130px;'/>
+        <img src='https://linkaband.com/assets/images/validation/reservation-noir.png' alt='Back-in-scott' style='width: 130px; height: 130px;'>
     </a>
 </body>
 </html>
