--- a/videos.html
+++ b/videos.html
@@ -23,7 +23,7 @@
         <section>
             <h2>Nos Vidéos</h2>
             <div class="videos">
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=sVYlkLauPlY" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sVYlkLauPlY" frameborder="0" allowfullscreen></iframe>
                 <!-- Ajoutez plus de vidéos ici -->
             </div>
         </section>
