--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 Back in Scott est un groupe tribute AC/DC composé de 5 musiciens d’Ille et Vilaine et des Côtes d’Armor ce qui en fait un groupe Tribute AC/DC certifié 100% Pur Beurre salé ! 
                 Le répertoire de Back in Scott s’articule essentiellement autour de la période Bon Scott d’AC/DC (1974-1980) sans oublier l’incontournable album <em>Back in Black</em>. Back in Scott est un tribute qui ne cherche pas à imiter ou singer mais à restituer l’énergie et le son brut originel d’AC/DC : Une rythmique implacable, des solos guitare tranchants et Rock and Roll, une performance vocale fidèle : <strong>Let there be Rock</strong> !
             </p>
-            <img src="images/back-in-scott-photo.jpg" alt="Back in Scott en concert">
+            <img src="Photos/Banniere.jpg" alt="Back in Scott en concert">
         </section>
     </main>
 
