--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Back in Scott</h1>
+    <header>    
+        <a href="index.html">
+            <img src="Photos/Back_in_scott.jpg" alt="Back in Scott logo" class="logo">
+        </a>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
