--- a/photos.html
+++ b/photos.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header>
-        <h1>Back in Scott</h1>
+        <a href="index.html">
+            <img src="Photos/Back_in_scott.jpg" alt="Back in Scott logo" class="logo">
+        </a>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
