--- a/photos.html
+++ b/photos.html
@@ -29,6 +29,11 @@
                 <img src="Photos/concert.jpg" alt="Concert 2">
                 <img src="Photos/concert.jpg" alt="Concert 3">
                 <!-- Ajoutez plus d'images ici -->
+            </div><div class="gallery">
+                <img src="Photos/concert.jpg" alt="Concert 1">
+                <img src="Photos/concert.jpg" alt="Concert 2">
+                <img src="Photos/concert.jpg" alt="Concert 3">
+                <!-- Ajoutez plus d'images ici -->
             </div>
         </section>
     </main>
