--- a/videos.html
+++ b/videos.html
@@ -26,6 +26,14 @@
             <h2>Nos Vidéos</h2>
             <div class="videos">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/sVYlkLauPlY" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/AUYfjLRcaE0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RY41igptHGs" frameborder="0" allowfullscreen></iframe>
+                <!-- Ajoutez plus de vidéos ici -->
+            </div>
+            <div class="videos">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sVYlkLauPlY" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/AUYfjLRcaE0" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RY41igptHGs" frameborder="0" allowfullscreen></iframe>
                 <!-- Ajoutez plus de vidéos ici -->
             </div>
         </section>
